--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -7,6 +7,22 @@
 	background-color: red!important;
 	border: 0px;
 }
+.preguntas{
+	float: right;
+	width: 350px;
+	background-color: transparent;
+	border-radius: 20px;
+	margin-top: 20px!important;
+	margin-right: 5px!important;
+	margin-bottom: 20px!important;
+}
+.close{
+	background-color: red!important;
+    opacity: 1!important;
+    padding: 0px 5px 0px 5px!important;
+    border-radius: 30px!important;
+    color: white!important;
+}
 .green{
 	background-color: green!important;
 	border: 0px;
