--- a/app/views/parcial/_menu.html.erb
+++ b/app/views/parcial/_menu.html.erb
@@ -1,7 +1,7 @@
 
 <li><%= link_to 'Productos', productos_path, "class" => "page-scroll" %></li>
 <li><%= link_to 'categoria', producto_padres_path, "class" => "page-scroll" %></li>
-<li><%= link_to "eventos", eventos_path, "class" => "page-scroll"%></li>
+<li><%= link_to "eventos", eventos_path, "class" => "page-scroll", "onclick"=>"cargar()"%></li>
 <li><%= link_to "Puestos de trabajo", rols_path, "class" => "page-scroll"%></li>
 <%unless  @first_user.present?%>
 	<%= link_to "Registrar", new_admin_path, class: "green page-scroll"%>
