--- a/app/views/producto_padres/_form.html.erb
+++ b/app/views/producto_padres/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :nombre %><br>
-    <%= f.text_field :nombre %>
+    <%= f.text_field :nombre , "required"=>"required"%>
   </div>
   <div class="field">
     <%= f.label :descripcion %><br>
