--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -14,7 +14,7 @@
       <th>Clave</th>
       <th>Costo</th>
       <th>Venta</th>
-      <th>Descripcion</th>
+      <th>Tiempo de instalacion</th>
       <th>Producto padre</th>
       <th colspan="3"></th>
     </tr>
@@ -27,7 +27,7 @@
         <td><%= producto.clave %></td>
         <td><%= producto.precio %></td>
         <td><%= producto.venta %></td>
-        <td><%= producto.descripcion %></td>
+        <td><%= producto.instalacion %>min</td>
         <td><%= producto.producto_padre.nombre %></td>
         <td><%= link_to 'Ver', producto %></td>
         <td><%= link_to 'Editar', edit_producto_path(producto) %></td>
