--- a/app/views/admins/_form.html.erb
+++ b/app/views/admins/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for(@user, :url => { :action => "create" } ) do |f| %>
     <div class="field">
-      <%= f.label :email , "Correo electronico"%><br />
+      <%= f.label :email , "Correo electronico"%><br>
       <%= f.email_field :email, autofocus: true ,class: "form-control"%>
     </div>
     <div class="field">
-      <%= f.label :privilegio , "Confirmacion de password"%><br />
+      <%= f.label :privilegio , "Confirmacion de password"%><br>
       <%= f.select :privilegio, class: "form-control" do%>
         <%= content_tag(:option, "Usuario Normal", value: 1) %>
         <%= content_tag(:option, "Administrador", value: 2) %>
@@ -14,15 +14,13 @@
       <%= f.label :password %>
       <% if @minimum_password_length %>
       <em>(Minimo <%= @minimum_password_length %> caracteres)</em>
-      <% end %><br />
+      <% end %><br>
       <%= f.password_field :password, autocomplete: "off",class: "form-control" %>
     </div>
-
     <div class="field">
-      <%= f.label :password_confirmation , "Confirmacion de password"%><br />
+      <%= f.label :password_confirmation , "Confirmacion de password"%><br>
       <%= f.password_field :password_confirmation, autocomplete: "off" ,class: "form-control"%>
     </div>
-
     <div class="actions">
       <%= f.submit  "Registrar usuario" %>
     </div>
