--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,5 +1,4 @@
-
-  <h2 class="alert alert-info">
+<h2 class="alert alert-info">
     <strong>Administracion de Usuarios</strong> 
   </h2>
   <%= link_to ' Crear usuario', new_admin_path,  "data-role" => "button", "data-theme" => "b", "data-inline"=>"true" %>
@@ -35,4 +34,4 @@
       </tbody>
     </table>
 
-  <%= link_to ' Regresar', root_path, "data-role" => "button", "data-theme" => "b", "data-inline"=>"true", "class" => "float_right"%>
+  <%= link_to ' Regresar', root_path, "data-role" => "button", "data-theme" => "b", "data-inline"=>"true", "class" => "float_right"%></div>
