--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1 class="alert alert-success" >Lista de productos</h1>
-<%= link_to 'Producto nuevo', new_producto_path, "data-role" => "button", "data-inline" => "true", "data-theme" => "b" , "class" => "float_right"  %>
+<%= link_to 'Producto nuevo', new_producto_path, "data-role" => "button", "data-inline" => "true", "data-theme" => "b"  %>
 <form class="col-md-12">
     <input id="filterTable-input" data-type="search">
 </form>
