--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body id="page-top">
+<body>
 <div data-role="page">
 	<div data-role="header" class="header">
 	<%= render "parcial/nav"%>
@@ -17,7 +17,7 @@
 		<p class="notice alert"><%= notice %></p>
        	<p class="alert"><%= alert %></p>
 	</div>
-	<div data-role="content" class="col-md-8 col-md-offset-2 contenido" >
+	<div data-role="content"  id="page-top"class="col-md-8 col-md-offset-2 contenido" >
 		<%= yield %>
 	</div>
 	<div class="col-md-2 big"> 
