--- a/app/views/eventos/_modales.html.erb
+++ b/app/views/eventos/_modales.html.erb
@@ -5,11 +5,11 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" data-inline="true">&times;</button>
-        <h3 class="modal-title alert alert-info center">Comerciales Facturas</h3>
+        <h3 class="modal-title alert alert-danger center">Comerciales Facturas</h3>
       </div>
       <div class="modal-body">
         <div id="cuest">
-          <h5 class="center">¿CONTROL DE INVETARIOS?</h5>
+          <h5 class="center">¿CONTROL DE INVENTARIOS?</h5>
           <center>
             <button onclick="aceptado(1)" class=" ui-btn ui-btn-inline ui-shadow ui-corner-all">si</button>
             <button onclick="rechazado(1)" class=" ui-btn ui-btn-inline ui-shadow ui-corner-all">no</button>
@@ -27,7 +27,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" data-inline="true">&times;</button>
-        <h3 class="modal-title alert alert-info center">Sistemas contables</h3>
+        <h3 class="modal-title alert alert-danger center">Sistemas contables</h3>
       </div>
       <div class="modal-body">
         <div id="contable">
@@ -51,7 +51,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" data-inline="true">&times;</button>
-        <h3 class="modal-title alert alert-info center">Sistemas Nóminas</h3>
+        <h3 class="modal-title alert alert-danger center">Sistemas Nóminas</h3>
       </div>
       <div class="modal-body">
         <div id="nomina">
