--- a/app/views/parcial/_nav.html.erb
+++ b/app/views/parcial/_nav.html.erb
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">		
+<nav class="navbar navbar-default navbar-fixed-top color-header" role="navigation">		
  	<div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="/">SOS Software</a>
                 <ul data-role="listview" data-inset="true" data-shadow="false" data-theme="b" class="menu_small">
 				  	<li data-role="collapsible" data-iconpos="right" data-inset="false">
 				    	<h2>SOS Software</h2>
-				    	<ul data-role="listview">
+				    	<ul data-role="listview color-header">
 					    	<%= render "parcial/menu"%>
 				    	</ul>
 				  	</li>
