--- a/app/views/producto_padres/index.html.erb
+++ b/app/views/producto_padres/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="alert alert-success" >Lista de Categorias</h1>
+<h1 class="alert alert-danger center" >Lista de Categorias</h1>
 
 <table class="table table-bordered ui-responsive" data-role="table">
   <thead>
