--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="alert alert-danger" ><%=image_tag "sos", class: "img_Small"%> SOS Software </h1>
+<center><%=image_tag "sos", class: ""%>  </center>
 
 <div class="flexslider" id="flexslider" rel="external">
   <ul class="slides">
