--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="alert alert-info">
+<h2 class="alert alert-danger center">
     <strong>Administracion de Usuarios</strong> 
   </h2>
   <%= link_to ' Crear usuario', new_admin_path,  "data-role" => "button", "data-theme" => "b", "data-inline"=>"true" %>
