--- a/app/views/eventos/index.html.erb
+++ b/app/views/eventos/index.html.erb
@@ -15,9 +15,14 @@
   </div>
   <%= render "adicional"%>
   <%= form_tag({:controller => "eventos", :action => "index"}, :method => "get", "id"=>"index") do %>
-     <h4 class="alert alert-danger clear">Nombre de cliente</h4>
-      <input type="text" name="cliente" placeholder="Juan Miguel Lopez Sanchez" required>  
-      <h4 class="alert alert-info clear">Productos Seleccionados</h4>
+     <h4 class="alert alert-danger clear center">Nombre de cliente</h4>
+      <div class="col-md-6">
+        <input type="text" name="cliente" placeholder="Nombre(s)" required> 
+      </div>
+      <div class="col-md-6">
+        <input type="text" name="cliente_apellido" placeholder="Apellido(s)" required> 
+      </div> 
+      <h4 class="alert alert-danger clear center">Productos Seleccionados</h4>
   	<div id="elements"></div>
     <fieldset>
   <div data-role="fieldcontain">
