--- a/app/views/eventos/index.html.erb
+++ b/app/views/eventos/index.html.erb
@@ -26,7 +26,7 @@
   	<div id="elements"></div>
     <fieldset>
   <div data-role="fieldcontain">
-    <label for="select-based-flipswitch">Requiere Instalacion remota:</label>
+    <label for="select-based-flipswitch">Requiere instalación remota:</label>
     <select id="select-based-flipswitch" name="instalacion" >
       <option value="No">No</option>
       <option value="Remotamente">Remotamente</option>
