--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
        	<p class="alert"><%= alert %></p>
 	</div>
 	<div data-role="content"  id="page-top"class="col-md-8 col-md-offset-2 contenido" >
-		<%= yield %>
+		<div class="maximo">
+			<%= yield %>
+		</div>
 	</div>
 	<div class="col-md-2 big"> 
 		<p class="notice alert"><%= notice %></p>
