--- a/app/views/producto_padres/_form.html.erb
+++ b/app/views/producto_padres/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :nombre , "required"=>"required"%>
   </div>
   <div class="field">
+    <%= f.label :clave %><br>
+    <%= f.text_field :clave , "required"=>"required"%>
+  </div>
+  <div class="field">
     <%= f.label :descripcion %><br>
     <%= f.text_area :descripcion %>
   </div>
