--- a/app/views/producto_padres/index.html.erb
+++ b/app/views/producto_padres/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Nombre</th>
+      <th>Clave</th>
       <th>Descripcion</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +16,7 @@
     <% @producto_padres.each do |producto_padre| %>
       <tr>
         <td><%= producto_padre.nombre %></td>
+        <td><%= producto_padre.clave %></td>
         <td><%= producto_padre.descripcion %></td>
         <td><%= link_to 'Ver', producto_padre %></td>
         <td><%= link_to 'Editar', edit_producto_padre_path(producto_padre) %></td>
