--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -14,7 +14,8 @@
       <th>Clave</th>
       <th>Costo</th>
       <th>Venta</th>
-      <th>Tiempo de instalacion</th>
+      <th>T. instalacion remota</th>
+      <th>T. instalacion presencial</th>
       <th>Proveedor</th>
       <th>Clave Proveedor</th>
       <th colspan="3"></th>
@@ -29,6 +30,7 @@
         <td><%= producto.precio %></td>
         <td><%= producto.venta %></td>
         <td><%= producto.instalacion %>min</td>
+        <td><%= producto.instalacionpreencial %>min</td>
         <td><%= producto.producto_padre.nombre %></td>
         <td><%= producto.producto_padre.clave %></td>
         <td><%= link_to 'Ver', producto %></td>
