--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -14,8 +14,8 @@
       <th>Clave</th>
       <th>Costo</th>
       <th>Venta</th>
-      <th>T. instalacion remota</th>
-      <th>T. instalacion presencial</th>
+      <th>Tiempo instalacion remota</th>
+      <th>Tiempo instalacion presencial</th>
       <th>Proveedor</th>
       <th>Clave Proveedor</th>
       <th colspan="3"></th>
