--- a/app/views/producto_padres/_form.html.erb
+++ b/app/views/producto_padres/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :nombre , "required"=>"required"%>
   </div>
   <div class="field">
-    <%= f.label :clave %><br>
+    <%= f.label :clave, "Clave de proveedor" %><br>
     <%= f.text_field :clave , "required"=>"required"%>
   </div>
   <div class="field">
