--- a/app/views/xls/subir_archivos.html.erb
+++ b/app/views/xls/subir_archivos.html.erb
@@ -1,6 +1,6 @@
 <h2 class="alert alert-danger center">Carga un Documento XLS</h2>	
 <p>Es de suma importancia recordar que el xls debe tener la siguiente estructura:<br>
-A - proveedor B - clave proveedor C - clave producto  D - Precio proveedor E - Precio S/IVA al publico F - tiempo de instalacion remotamente en minutos  G - tiempo de instalacion presencial en minutos  H - Descripcion de producto  </p>
+A - proveedor B - clave proveedor C - clave producto D - Nombre de producto  E - Precio proveedor F - Precio S/IVA al publico G - tiempo de instalacion remotamente en minutos  H - tiempo de instalacion presencial en minutos  I - Descripcion de producto(opcional)  </p>
 <%= form_tag({:controller => "xls", :action => "subir_archivos"}, :method => "post","data-ajax"=>"false", :multipart => true) do %>
    <%= file_field_tag "archivo", :required => "required" %>
    <%= submit_tag "Subir archivo"%>
