--- a/app/views/producto_padres/index.html.erb
+++ b/app/views/producto_padres/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="alert alert-danger center" >Lista de Categorias</h1>
+<h1 class="alert alert-danger center" >Pruductos padre</h1>
 
 <table class="table table-bordered ui-responsive" data-role="table">
   <thead>
     <tr>
       <th>Nombre</th>
-      <th>Clave</th>
+      <th>Clave de proveedor</th>
       <th>Descripcion</th>
       <th colspan="3"></th>
     </tr>
