--- a/app/views/rols/index.html.erb
+++ b/app/views/rols/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Nombre</th>
-      <th>Precio hora</th>
+      <th>Costo por hora</th>
       <th colspan="3"></th>
     </tr>
   </thead>
