--- a/app/views/eventos/index.html.erb
+++ b/app/views/eventos/index.html.erb
@@ -1,26 +1,39 @@
 <%if @data.blank?%>
+  <h1 class="alert alert-danger center" >Proceso de Venta</h1>
+  <button data-role="button" data-inline="true" onclick="cargar()">Venta Nueva</button>
   <input data-type="search" id="searchForCollapsibleSetChildren">
   <div data-role="collapsible-set" data-filter="true" data-children="> div, > div div ul button" data-inset="true" id="collapsiblesetForFilterChildren" data-input="#searchForCollapsibleSetChildren">
-    <%@padre.each do |padre|%>
-      <% @productos = Producto.where("producto_padre_id = ?", padre.id) %>
-      <div data-role="collapsible" data-filtertext="<%=padre.nombre%> <%@productos.each do |name|%> <%=name.nombre%> <%=name.clave%> <%end%>">
-          <h3><%=padre.nombre%></h3>
-          <ul data-role="listview" data-inset="false">
-            <%@productos.each do |name|%> 
-              <button data-filtertext="<%=name.clave%> <%=name.nombre%>" data-theme="b" onclick="enviar(<%=name.id%>, '<%=name.nombre%>')"><%=name.nombre%></button>
-            <%end%> 
-          </ul>
-      </div>
+    <%if @padre.present?%>
+      <%@padre.each do |padre|%>
+        <% @productos = Producto.where("producto_padre_id = ?", padre.id) %>
+        <div data-role="collapsible" data-filtertext="<%=padre.nombre%> <%@productos.each do |name|%> <%=name.nombre%> <%=name.clave%> <%end%>">
+            <h3><%=padre.nombre%></h3>
+            <ul data-role="listview" data-inset="false">
+              <%@productos.each do |name|%> 
+                <button data-filtertext="<%=name.clave%> <%=name.nombre%>" data-theme="b" onclick="enviar(<%=name.id%>, '<%=name.nombre%>')" class="ui-grid-a">
+                  <div class="ui-block-a"><%=name.nombre%></div>
+                  <div class="ui-grid-a">
+                    <div class="ui-block-a">Clave: <%= name.clave%></div>
+                    <div class="ui-block-b">Venta S/IVA: <%= name.venta%></div>
+                  </div> 
+                  
+                </button>
+              <%end%> 
+            </ul>
+        </div>
+      <%end%>
+    <%else%>
+      <p class="alert alert-danger">No se han registrado productos aun</p>
     <%end%>
   </div>
   <%= render "adicional"%>
   <%= form_tag({:controller => "eventos", :action => "index"}, :method => "get", "id"=>"index") do %>
      <h4 class="alert alert-danger clear center">Nombre de cliente</h4>
       <div class="col-md-6">
-        <input type="text" name="cliente" placeholder="Nombre(s)" required> 
+        <input type="text" name="cliente" placeholder="Nombre(s)" id="nom" required> 
       </div>
       <div class="col-md-6">
-        <input type="text" name="cliente_apellido" placeholder="Apellido(s)" required> 
+        <input type="text" name="cliente_apellido" placeholder="Apellido(s)"  id="ape" required> 
       </div> 
       <h4 class="alert alert-danger clear center">Productos Seleccionados</h4>
   	<div id="elements"></div>
@@ -37,6 +50,7 @@
      <%= submit_tag "Enviar" %>
   <% end %>
 <%end%>
+
 <%if @data.present?%>
   <div class="col-md-8">
     <p class="center">Descargar documento de Estimación con los siguientes elementos:</p>
@@ -80,7 +94,7 @@
     <%= link_to ' Descargar Estimación',  eventos_path(request.parameters.merge({:format => :xlsx})), :onclick => "$('#index').submit()","data-role" => "button","data-inline" => "true", "data-theme" => "b", "download"=>"fa-download", "data-ajax"=>"false"%>
     <%= link_to ' Descargar Cotización',  eventos_path(request.parameters.merge({:format => :pdf})), :onclick => "$('#index').submit()","data-role" => "button","data-inline" => "true", "data-theme" => "b", "download"=>"fa-download", "data-ajax"=>"false"%>
     <%= link_to ' Descargar carta de aceptacion',  eventos_path(request.parameters.merge({:format => :adicional})), :onclick => "$('#index').submit()","data-role" => "button","data-inline" => "true", "data-theme" => "b", "download"=>"fa-download", "data-ajax"=>"false"%>
-    <%= link_to "Regresar", eventos_path, "data-role" => "button","data-inline"=>"true","data-theme" =>"b", "onclick"=>"cargar()"%>
+    <%= link_to "Regresar", eventos_path, "data-role" => "button","data-inline"=>"true","data-theme" =>"b"%>
   </div>
   <div class="col-md-4">
     <%= image_tag("sos") %>
