--- a/app/views/producto_padres/index.html.erb
+++ b/app/views/producto_padres/index.html.erb
@@ -1,24 +1,21 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="alert alert-danger center" >Lista de Categorias</h1>
+<h1 class="alert alert-danger center" >Pruductos padre</h1>
 
 <table class="table table-bordered ui-responsive" data-role="table">
   <thead>
     <tr>
       <th>Nombre</th>
-      <th>Clave</th>
-      <th>Descripcion</th>
-      <th colspan="3"></th>
+      <th>Clave de proveedor</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @producto_padres.each do |producto_padre| %>
       <tr>
-        <td><%= producto_padre.nombre %></td>
+        <td><%= link_to  producto_padre.nombre, producto_padre %></td>
         <td><%= producto_padre.clave %></td>
-        <td><%= producto_padre.descripcion %></td>
-        <td><%= link_to 'Ver', producto_padre %></td>
         <td><%= link_to 'Editar', edit_producto_padre_path(producto_padre) %></td>
         <td><%= link_to 'Eliminar', producto_padre, method: :delete, data: { confirm: 'Estas seguro?' } %></td>
       </tr>
