--- a/app/views/eventos/index.html.erb
+++ b/app/views/eventos/index.html.erb
@@ -10,7 +10,7 @@
             <h3><%=padre.nombre%></h3>
             <ul data-role="listview" data-inset="false">
               <%@productos.each do |name|%> 
-                <button data-filtertext="<%=name.clave%> <%=name.nombre%>" data-theme="b" onclick="enviar(<%=name.id%>, '<%=name.nombre%>')" class="ui-grid-a">
+                <button data-filtertext="<%=name.clave%> <%=name.nombre%>" data-theme="b" onclick="enviar(<%=name.id%>, '<%=name.nombre%>', <%=name.venta%>)" class="ui-grid-a">
                   <div class="ui-block-a"><%=name.nombre%></div>
                   <div class="ui-grid-a">
                     <div class="ui-block-a">Clave: <%= name.clave%></div>
@@ -28,26 +28,34 @@
   </div>
   <%= render "adicional"%>
   <%= form_tag({:controller => "eventos", :action => "index"}, :method => "get", "id"=>"index") do %>
-     <h4 class="alert alert-danger clear center">Nombre de cliente</h4>
+     <h4 class="alert alert-danger clear center">Nombre de cliente * </h4>
       <div class="col-md-6">
         <input type="text" name="cliente" placeholder="Nombre(s)" id="nom" required> 
       </div>
       <div class="col-md-6">
-        <input type="text" name="cliente_apellido" placeholder="Apellido(s)"  id="ape" required> 
+        <input type="text" name="cliente_apellido" placeholder="Apellido(s)"  id="ape" value=""> 
       </div> 
       <h4 class="alert alert-danger clear center">Productos Seleccionados</h4>
   	<div id="elements"></div>
-    <fieldset>
-  <div data-role="fieldcontain">
-    <label for="select-based-flipswitch">Requiere instalación remota:</label>
-    <select id="select-based-flipswitch" name="instalacion" >
-      <option value="No">No</option>
-      <option value="Remotamente">Remotamente</option>
-      <option value="Presencialmente">Presencialmente</option>
-    </select>
-  </div>
-</fieldset>
+    <fieldset class="col-md-12">
+      <div data-role="fieldcontain" class="col-md-12">
+        <label for="select-based-flipswitch">Requiere instalación remota:</label>
+        <select id="select-based-flipswitch" name="instalacion" onchange="validarval()" >
+          <option value="No">No</option>
+          <option value="Remotamente">Remotamente</option>
+          <option value="Presencialmente">Presencialmente</option>
+        </select>
+      </div>
+    </fieldset>
+    <div class="col-md-12 desaparecetime" id="desaparecetime">
+      <h4 class="alert alert-danger clear center">Tiempo de instalación y capacitación en minutos * </h4>
+      <div class="col-md-2">
+        <input type="number" name="tiempoinstalar" placeholder="35" id="tiempos" > 
+      </div>
+    </div>
+    <div class="col-md-12">
      <%= submit_tag "Enviar" %>
+     </div>
   <% end %>
 <%end%>
 
