--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,6 +8,9 @@ ul.nav > li > a:hover {    color: gold!important;}ul.nav > li > a:active {    co
 @media(min-width: 1400px){
 	.maximo{max-width: 1200px;margin: 0 auto!important;}
 }
+input{
+	word-break: break-word;
+}
 label{
 	margin-top: 20px!important;
 	margin-bottom: 0px!important;
@@ -22,4 +25,7 @@ button.active{
 	-webkit-box-shadow: 0px 0px 10px 2px rgba(252,0,0,1);
 	-moz-box-shadow: 0px 0px 10px 2px rgba(252,0,0,1);
 	box-shadow: 0px 0px 10px 2px rgba(252,0,0,1);
+}
+.desaparecetime{
+	visibility: hidden;
 }
