--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,6 +1,10 @@
 <h2 class="alert alert-danger center">
     <strong>Administracion de Usuarios</strong> 
   </h2>
+
+<%if @user.present?%>
+  <%= @user%>
+  <%end%>
   <%= link_to ' Crear usuario', new_admin_path,  "data-role" => "button", "data-theme" => "b", "data-inline"=>"true" %>
   <div class="table-responsive">
     <table class="table table-bordered ui-responsive" data-role="table">
