--- a/app/views/parcial/_menu.html.erb
+++ b/app/views/parcial/_menu.html.erb
@@ -9,13 +9,19 @@
 		<li><%= link_to 'Productos Padre', producto_padres_path, "class" => "page-scroll" %></li>
 		<li><%= link_to "Puestos de trabajo", rols_path, "class" => "page-scroll"%></li>
 		<li><a href="/xls/subir_archivos" class="page-scroll">Subir productos</a></li>
-		<li>
-			<%= link_to "Registrar", admins_path, class: " page-scroll "%>
-		</li>
 	<%end%>
-	<li >
-		<%= link_to "Salir", destroy_user_session_path, method: :delete, class: "page-scroll"%>
-	</li>
+	<li class="dropdown page-scroll">
+        <a href="#" class="dropdown-toggle page-scroll" data-toggle="dropdown">
+          Usuario<b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><%= link_to "Cambiar password", edit_user_registration_path,"class" => "page-scroll" %></li>
+			<li><%= link_to "Salir", destroy_user_session_path, method: :delete, class: "page-scroll"%></li>
+			<%if current_user.is_admin?%>
+				<li><%= link_to "Registrar", admins_path, class: " page-scroll "%></li>
+			<%end%>
+        </ul>
+      </li>
 <%else%>
 	<li>
 			<%= link_to('Login', new_user_session_path, class: "page-scroll")  %>  
