--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -45,7 +45,7 @@
         <%if current_user.is_admin?%>
         <td><%= link_to 'Ver', producto %></td>
         <td><%= link_to 'Editar', edit_producto_path(producto) %></td>
-        <td><%= link_to 'Destruir', producto, method: :delete, data: { confirm: 'Estas Seguro?' } %></td>
+        <td><%= link_to 'Eliminar', producto, method: :delete, data: { confirm: 'Estas Seguro?' } %></td>
         <%end%>
       </tr>
     <% end %>
