--- a/app/views/rols/_form.html.erb
+++ b/app/views/rols/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="col-md-8 col-md-offset-2">
 <%= form_for(@rol) do |f| %>
   <% if @rol.errors.any? %>
     <div id="error_explanation">
@@ -12,14 +13,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nombre %><br>
+    <%= f.label :nombre ,"Nombre de Rol *"%><br>
     <%= f.text_field :nombre ,"required" => "required"%>
   </div>
   <div class="field">
-    <%= f.label :precio_hora %><br>
+    <%= f.label :precio_hora , "Costo por hora *"%><br>
     <%= f.number_field :precio_hora ,"required" => "required", "step"=>"any"%>
   </div>
   <div class="actions">
     <%= f.submit "Guardar"%>
   </div>
 <% end %>
+</div>
